Bug 1338384: added STUN bandwidth attribute. r=bwc

MozReview-Commit-ID: DiW32Zdmen8